# fermenter-temp-controller

./: .env  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Dockerfile.controller  Dockerfile.pytests  Dockerfile.web_apis  INSTALL.md  Pipfile  README.md  TODO.md  analyse_temp_data.py  build_and_run_web_docker_image.sh  compose.yaml  config.txt  docker-compose.yaml  kill_temp_controller.sh  logrotate.config  pyproject.toml  queryelastic.py  requirements.txt  run_temp_controller.sh  serialmonitor.py  tempcontroller.py  test_influxdb.py
archive/: Documentation.md  Pipfile  logrotate.config  requirements.txt  run_temp_controller.sh  serialmonitor.py  tempcontroller.py  test_influxdb.py
arduino/: compile_arduino.sh  upload_arduino.sh
build_run/: Dockerfile.web_apis  build_and_run_web_docker_image.sh
controller/: Documentation.md  config-test.ini  config.py  docker-compose.yaml  requirements.txt  temp_controller.py  temperature_database.py  write_random_temp_data_to_influxdb.py  zmq_receiver.py  zmq_sender.py
docs/: architecture-review-2026-07-16.md  index.rst  installation.md  openspec-rewrite-management.md  rewrite-plan.md  system-analysis.md
fermenter/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  compose.yaml
fermenter/src/: brew_session.rs  config.rs  error.rs  ingest.rs  lib.rs  main.rs  model.rs  reason_code.rs  temperature_control.rs
fermenter/src/serial/: arduino.rs  mock.rs  mod.rs
fermenter/src/store/: fake.rs  mod.rs  redis.rs
fermenter/src/web/: handlers.rs  mod.rs  render.rs
fermenter/src/web/snapshots/: fermenter__web__handlers__tests__brew_form_with_current_brew_snapshot.snap  fermenter__web__handlers__tests__brew_form_with_error_snapshot.snap  fermenter__web__handlers__tests__chart_fragment_with_history_snapshot.snap  fermenter__web__handlers__tests__chart_fragment_without_history_snapshot.snap  fermenter__web__handlers__tests__dashboard_renders_snapshot.snap  fermenter__web__handlers__tests__status_fragment_with_reading_snapshot.snap  fermenter__web__handlers__tests__status_fragment_without_reading_snapshot.snap  fermenter__web__handlers__tests__target_form_with_current_target_snapshot.snap  fermenter__web__handlers__tests__target_form_with_error_snapshot.snap
fermenter/static/: styles.css
fermenter/templates/: base.html  brew_form.html  dashboard.html  target_form.html
fermenter/templates/partials/: status.html
fermenter/tests/: serial_hardware.rs  store_redis.rs
influxdb/: influxdb2_inital_config.sh  influxdb2_run.sh  write_random_temp_data_to_influxdb.py
openspec/: config.yaml
python/: Dockerfile  Dockerfile.fastapi  Documentation.md  build_run_docker_for_testing.sh  config.py  docker-compose.yaml  docker_commands.txt  generate_data.sh  main.py  new_main.py  requirements-full.txt  requirements.txt  serial_test.py  temp_controller.py  temperature_database.py  test_config.txt  test_config_file.py  test_config_file.txt  test_config_file_invalid_target_temp.txt  test_config_file_invalid_timezone_in_general_section.txt  test_config_file_invalid_url_in_influxdb_section.txt  test_config_file_no_auth_token_in_influxdb_section.txt  test_config_file_no_brew_id_in_fermenter_section.txt  test_config_file_no_bucket_in_influxdb_section.txt  test_config_file_no_fermenter_section.txt  test_config_file_no_general_section.txt  test_config_file_no_influxdb_section.txt  test_config_file_no_org_in_influxdb_section.txt  test_config_file_no_target_temp_in_fermenter_section.txt  test_config_file_no_timezone_in_general_section.txt  test_config_file_no_url_in_influxdb_section.txt  test_database.py  test_influxdb.py  test_main.py  test_serial.py  test_temp_controller.py  test_valid_config_file.txt  test_zmq_receiver.py  test_zmq_sender.py  test_zmq_sender_and_receiver.py  (+2 more)
scripts/: build_and_ship_image.sh
tests/: config-test.ini  conftest.py  requirements.txt  test_arduino.py  test_config_file.py  test_config_file_in_settings.py  test_config_file_invalid_timezone_in_general_section.ini  test_config_file_invalid_url_in_zmq_section.ini  test_config_file_no_arduino_section.ini  test_config_file_no_brew_id_in_fermenter_section.ini  test_config_file_no_bucket_in_influxdb_section.ini  test_config_file_no_fermenter_section.ini  test_config_file_no_general_section.ini  test_config_file_no_timezone_in_general_section.ini  (+10 more)
(+198 files in other folders)
