[package]
name = "fermenter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
envy = "0.4"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
rstest = "0.23"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["redis"] }
