[package]
name = "fermenter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
envy = "0.4"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
minijinja = "2"
tokio-serial = "5.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
rstest = "0.23"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["redis"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
insta = "1"
